syntax = "proto3";

option csharp_namespace = "SnackTime.MediaServer.ProtoGenerated";

package snacktime.series.service;

import "proto/media.proto";

message GetLastDownloadedRequest {
}
message GetLastDownloadedResponse {
    repeated snacktime.media.Series series = 1;
}