syntax = "proto3";

option csharp_namespace = "SnackTime.MediaServer.Service.Series";

package snacktime.series.service;

import "proto/media.proto";

message GetByIdRequest {
    int32 id = 1;
}
message GetByIdResponse {
    snacktime.media.Series series = 1;
}